AWS Infrastructure/kubernetes-manifests/namespace.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: hextris
  labels:
    name: hextris
