AWS Infrastructure/kubernetes-manifests/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: hextris-service
  namespace: hextris
spec:
  selector:
    app: hextris
  ports:
    - protocol: TCP
      port: 80
      targetPort: 8080
  type: ClusterIP
