AWS Infrastructure/kubernetes-manifests/devops-ingress.yaml

apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: hextris-ingress
  labels:
      - name: hextris
  annotations:
    # Load Balancer Name
    # alb.ingress.kubernetes.io/load-balancer-name: hextris-ingress
    # Ingress Core Settings  
    alb.ingress.kubernetes.io/scheme: internet-facing
    # Health Check Settings
    alb.ingress.kubernetes.io/healthcheck-protocol: HTTP 
    alb.ingress.kubernetes.io/healthcheck-port: traffic-port    
    alb.ingress.kubernetes.io/healthcheck-interval-seconds: '15'
    alb.ingress.kubernetes.io/healthcheck-timeout-seconds: '5'
    alb.ingress.kubernetes.io/success-codes: '200'
    alb.ingress.kubernetes.io/healthy-threshold-count: '2'
    alb.ingress.kubernetes.io/unhealthy-threshold-count: '2'  
    ## SSL Settings
    alb.ingress.kubernetes.io/listen-ports: '[{"HTTPS":443}, {"HTTP":80}]'
    alb.ingress.kubernetes.io/certificate-arn: arn:aws:acm:us-east-1:262194309594:certificate/f553be66-7fe6-4eac-b400-4bcc26cde50e    
    # SSL Redirect Setting
    alb.ingress.kubernetes.io/ssl-redirect: '443'
    # External DNS - For creating a Record Set in Route53
    external-dns.alpha.kubernetes.io/hostname: hextris.work.gd
spec:
  rules:
    - http:
        paths:      
          - path: /
            pathType: Prefix
            backend:
              service:
                name: hextris-service
                port: 
                  number: 80
