AWS Infrastructure/kubernetes-manifests/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: hextris-ingress
  namespace: hextris
  annotations:
    kubernetes.io/ingress.class: alb
    alb.ingress.kubernetes.io/scheme: internet-facing
    alb.ingress.kubernetes.io/target-type: ip
    alb.ingress.kubernetes.io/ssl-redirect: "443"
    alb.ingress.kubernetes.io/listen-ports: '[{"HTTP": 80}, {"HTTPS":443}]'
    alb.ingress.kubernetes.io/healthcheck-path: "/"
    alb.ingress.kubernetes.io/healthcheck-protocol: HTTP
spec:
  tls:
  - hosts:
    - "hextris.work.gd"
    - "*.hextris.work.gd"
    secretName: hextris-tls
  rules:
  - host: "hextris.work.gd"
    http:
      paths:
      - path: /
        pathType: Prefix
        backend:
          service:
            name: hextris-service
            port:
              number: 80
  - host: "*.hextris.work.gd"
    http:
      paths:
      - path: /
        pathType: Prefix
        backend:
          service:
            name: hextris-service
            port:
              number: 80
